--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -3,7 +3,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.gradle.user.home=null
 connection.java.home=null
 connection.jvm.arguments=
-connection.project.dir=..
-derived.resources=.gradle
+connection.project.dir=
+derived.resources=.gradle,build
 eclipse.preferences.version=1
 project.path=\:
