add observer pattern and anonymous class(in Pacman and World Class)

--- a/desktop/.project
+++ b/desktop/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>desktop</name>
-	<comment>Project desktop created by Buildship.</comment>
+	<name>pacmanGame-desktop</name>
+	<comment>Project pacmanGame-desktop created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
